image cropper fixed

--- a/functions/src/client/web/components/common/CropperModal/CropperModal.module.css
+++ b/functions/src/client/web/components/common/CropperModal/CropperModal.module.css
@@ -48,7 +48,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: space-between;
 }
 
 .footerSubContainer {
@@ -75,6 +75,27 @@
 }
 
 .cropper {
+    overflow: auto;
+    width: 70%;
+    height:100%
+}
+
+.cropper > div:first-of-type {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow-x: visible !important;    
+    overflow-y: visible !important;    
+}
+
+.sliderContainer {
+    width: 150px;
+    height: 30px;
+    margin-left: 50px;
+}
+
+/* .cropper {
     width: 70%;
     height: 100%;
 }
@@ -109,5 +130,5 @@
 
 .cropperActiveFlipH > div > img {
     transform: scaleY(-1);
-}
+} */
 
