--- a/functions/src/client/web/components/common/inputs/ImageInput/ImageInput.module.css
+++ b/functions/src/client/web/components/common/inputs/ImageInput/ImageInput.module.css
@@ -14,13 +14,22 @@
     height: 100%;
     border-radius: 20px;
     margin-bottom: 20px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
     
 
     margin-top: 20px;
     background-color: var(--main-lightgray-color);
 }
 
-.imagePickerButton > div {
+.imagePickerButton div {
+    width: 100%;
+    height: 100%;       
+}
+
+/* .imagePickerButton > div {
     width: 100%;
     height: 100%;
 }
@@ -28,12 +37,12 @@
 .imagePickerButton > div > div {
     width: 100%;
     height: 100%;
-}
+} */
 
 .image {
     border-radius: 20px;
-    max-width: 100%;
+    object-fit: contain;
+    width: 100%;
     max-height: 100%;
-    min-height: 100%;
     margin: auto;
 }
